[gd_scene load_steps=23 format=3 uid="uid://dosibav3620rd"]

[ext_resource type="Script" path="res://Assets/Player/Platform/player_platform.gd" id="1_uttb6"]
[ext_resource type="Texture2D" uid="uid://b7hex7r7x46h6" path="res://Assets/Player/Platform/peli.png" id="2_86gsd"]
[ext_resource type="PackedScene" path="res://Assets/Player/Platform/player_death_particles.tscn" id="2_smvec"]
[ext_resource type="PackedScene" path="res://Assets/Player/Platform/death_popup.tscn" id="3_15alw"]
[ext_resource type="Texture2D" uid="uid://uncja65cv5yx" path="res://Assets/kuvat/Player_attacks 2.png" id="4_d60uk"]
[ext_resource type="Texture2D" uid="uid://dtvdornl3c0oj" path="res://Assets/kuvat/Player_jump (1).png" id="5_q4ode"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p3swc"]
atlas = ExtResource("4_d60uk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lajku"]
atlas = ExtResource("4_d60uk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulsee"]
atlas = ExtResource("4_d60uk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvs8r"]
atlas = ExtResource("4_d60uk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g7gg"]
atlas = ExtResource("4_d60uk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kqdy"]
atlas = ExtResource("4_d60uk")
region = Rect2(0, 0, 45, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7c8e"]
atlas = ExtResource("5_q4ode")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2u57"]
atlas = ExtResource("5_q4ode")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qs2w"]
atlas = ExtResource("5_q4ode")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_st4bs"]
atlas = ExtResource("2_86gsd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sin2i"]
atlas = ExtResource("2_86gsd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivqfb"]
atlas = ExtResource("2_86gsd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxit6"]
atlas = ExtResource("2_86gsd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_82py8"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3swc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lajku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulsee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvs8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g7gg")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kqdy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7c8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2u57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2u57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2u57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qs2w")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_st4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sin2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivqfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxit6")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me8ic"]
size = Vector2(30, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ky1j"]
size = Vector2(35.75, 81)

[node name="player_platform" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 47
script = ExtResource("1_uttb6")
death_particles = ExtResource("2_smvec")
death_popup = ExtResource("3_15alw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_82py8")
animation = &"jump"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0.5)
shape = SubResource("RectangleShape2D_me8ic")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(17, 0)

[node name="Area2D" type="Area2D" parent="Marker2D"]
collision_mask = 5

[node name="melee_hitbox" type="CollisionShape2D" parent="Marker2D/Area2D"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_1ky1j")
disabled = true

[node name="Invisibility" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeleeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Marker2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Invisibility" to="." method="_on_invisibility_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_melee_timer_timeout"]
